--- a/assets/default.css
+++ b/assets/default.css
@@ -34,6 +34,7 @@ html {
 }
 
 #main {
+    background-image: linear-gradient(to bottom, rgba(31, 37, 51, 0.5), rgba(31, 37, 51, 0.9)) ;
 }
 
 #header {
@@ -82,6 +83,8 @@ html {
     background-color: rgb(252, 172, 0);
     cursor: pointer;
     border-radius: 2px;
+    transform: scale(110%);
+    transition: all ease 0.6s;
 }
 
 
@@ -100,6 +103,7 @@ html {
 
 #nav > li:hover > .subnav {
     display: block;
+    animation: swipeRight ease 0.8s;
 }
 
 .subnav > li:hover, .subnav > li:hover > i {
@@ -119,7 +123,6 @@ html {
 
 .subnav > li a {
     color: black;
-
 }
 
 .subnav li i {
@@ -130,6 +133,7 @@ html {
 
 .subnav li:hover li {
     display: block;
+    animation: swipeRight ease 0.8s;
 }
 
 .subnav2 li {
@@ -182,6 +186,8 @@ html {
     color: black;
     cursor: pointer;
     background-color: var(--hover-color);
+    transform: scale(110%);
+    transition: all ease 0.6s;
 }
 
 .js-btn-logIn,
@@ -193,10 +199,6 @@ html {
 }
 
 /*Slider*/
-
-#slider {
-    
-}
 
 /*Content*/
 
@@ -226,6 +228,7 @@ html {
 .phieu.open {
     display: flex;
     flex-direction: column;
+    animation: phieuSlideDown ease 0.8s;
 }
 
 .label-heading {
@@ -416,7 +419,7 @@ th, td {
 }
 
 #modal-button-logIn:hover {
-    opacity: 0.9;
+    filter: brightness(90%);
     cursor: pointer;
 }
 
@@ -443,5 +446,27 @@ th, td {
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes phieuSlideDown {
+    from {
+        opacity: 0;
+        transform: translateY(-50%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes swipeRight {
+    from {
+        opacity: 0;
+        transform: translateX(-10%);
+    } 
+    to {    
+        opacity: 1;
+        transform: translateX(0);
     }
 }
