--- a/assets/default.css
+++ b/assets/default.css
@@ -18,7 +18,6 @@ html {
 
 .row {
     margin: 8px;
-
 }
 
 .col {
@@ -80,7 +79,7 @@ html {
 #nav > li:hover > a,
 #nav > li:hover > .nav-arrow-down {
     color: var(--text-black);
-    background-color: rgb(252, 172, 0);
+    background-image: linear-gradient(to right, rgb(252, 172, 0), rgb(255, 207, 104));
     cursor: pointer;
     border-radius: 2px;
     transform: scale(110%);
@@ -107,7 +106,7 @@ html {
 }
 
 .subnav > li:hover, .subnav > li:hover > i {
-    background-color: var(--hover-color);
+    background-image: linear-gradient(to right, var(--hover-color), rgb(255, 207, 104));
     color: black;
 }
 
@@ -150,7 +149,7 @@ html {
 }
 
 .subnav2 li:hover {
-    background-color: var(--hover-color);
+    background-image: linear-gradient(to right, var(--hover-color), rgb(255, 219, 140));
 }
 
 #nav .nav-arrow-down {
@@ -242,10 +241,6 @@ html {
     width: 100%;
 }
 
-#content .two-side {
-
-}
-
 #content .phieu-content {
     font-size: 15px;
     display: flex;
@@ -312,7 +307,6 @@ table {
     border: 2px solid #333;
 }
 
-.btn:hover,
 .btn-size-s:hover {
     cursor: pointer;
     opacity: 0.8;
@@ -327,10 +321,61 @@ th, td {
     float: right;
 }
 
-/*Footer*/
+.row-btn {
+    /* background-image: linear-gradient(to right, var(--hover-color), rgb(255, 207, 104)); */
+    position: relative;
+}
 
-#footer {
+.row-btn button {
+    background-image: linear-gradient(to right, var(--hover-color), rgb(255, 207, 104));
+    border: none;
+    font-size: 16px;
+}
+.row-btn span {
+    position: absolute;
+    background-color: var(--hover-color);
+}
 
+.rec-1 {
+    top: 10px;
+    left: 10px;
+    width: 0;
+    height: 2px;
+    transition: all 0.5s ease;
+}
+.rec-2 {
+    top: 10px;
+    right: 10px;
+    width: 2px;
+    height: 0;
+    transition: all 0.5s ease;
+}
+.rec-3 {
+    bottom: 10px;
+    right: 10px;
+    width: 0;
+    height: 2px;
+    transition: all 0.5s ease;
+}
+.rec-4 {
+    bottom: 10px;
+    left: 10px;
+    width: 2px;
+    height: 0;
+    transition: all 1s ease;
+}
+
+.row-btn button:hover {
+    background-image: none;
+    cursor: pointer;
+}
+
+.row-btn:hover .rec-1, .row-btn:hover .rec-3 {
+    width: 80%;
+}
+
+.row-btn:hover .rec-2, .row-btn:hover .rec-4 {
+    height: 65%;
 }
 
 /*Modal đăng nhập*/
